// Copyright (c) 2019 Minoru Osuka
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 		http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "protobuf/raft/raft.proto";

package index;

option go_package = "github.com/mosuka/blast/protobuf/index";

service Index {
    rpc Join (raft.JoinRequest) returns (google.protobuf.Empty) {}
    rpc Leave (raft.LeaveRequest) returns (google.protobuf.Empty) {}
    rpc GetNode (google.protobuf.Empty) returns (raft.GetNodeResponse) {}
    rpc GetCluster (google.protobuf.Empty) returns (raft.GetClusterResponse) {}
    rpc Snapshot (google.protobuf.Empty) returns (google.protobuf.Empty) {}

    rpc Get (GetRequest) returns (GetResponse) {}
    rpc Search (SearchRequest) returns (SearchResponse) {}
    rpc Index (IndexRequest) returns (google.protobuf.Empty) {}
    rpc Delete (DeleteRequest) returns (google.protobuf.Empty) {}
    rpc BulkIndex(stream Document) returns (BulkResult) {}
    rpc BulkDelete(stream Document) returns (BulkResult) {}

    rpc GetStats (google.protobuf.Empty) returns (GetStatsResponse) {}
}

message Document {
    string id = 1;
    google.protobuf.Any fields = 2;
}

message BulkResult {
    int32 count = 1;
}

message Stats {
    google.protobuf.Any stats = 1;
}

message GetRequest {
    Document document = 1;
}

message GetResponse {
    Document document = 1;
}

message SearchRequest {
    google.protobuf.Any search_request = 1;
}

message SearchResponse {
    google.protobuf.Any search_result = 1;
}

message IndexRequest {
    Document document = 1;
}

message DeleteRequest {
    Document document = 1;
}

message GetStatsResponse {
    Stats stats = 1;
}

message IndexCommand {
    enum Type {
        UNKNOWN_COMMAND = 0;
        SET_METADATA = 1;
        DELETE_METADATA = 2;
        INDEX_DOCUMENT = 3;
        DELETE_DOCUMENT = 4;
    }
    Type type = 1;
    google.protobuf.Any data = 2;
}
